--- a/style.css
+++ b/style.css
@@ -7,3 +7,16 @@
 .underline{
     text-decoration: underline;
 }
+/* text align */
+.left{
+    text-align: left;
+}
+.center{
+    text-align: center;
+}
+.right{
+    text-align: right;
+}
+.justify{
+    text-align: justify;
+}
